# Smart-Unpacker

./: .gitignore  AGENTS.md  LICENSE  PackRelic.spec  README.en.md  README.ja.md  README.md  SmartUnpacker.spec  SunPack.spec  builtin_passwords.txt  packrelic_config.json  pkrc.py  requirements-build.txt  requirements.txt  run_acceptance_tests.ps1  smart-unpacker.py  smart_unpacker_config.json  sunpack.py  sunpack_advanced_config.json  sunpack_cli.py  sunpack_config.json
.github/workflows/: release.yml  tests.yml
.sunpack/datasets/: repair_candidates_ltr_from_tests.jsonl  repair_candidates_ltr_from_tests.pretty.json
docs/: cli_parameters.md  configuration.md  configuration.zh.md  development_boundaries.md  development_setup.md  rule_plugins.md
fixtures/: README.md  test_archive.txt  test_enc_header.txt
historical_modules/scoring_rules/: README.md  embedded_archive.py  magic_bytes.py
licenses/: 7zip-license.txt
native/packrelic_native/: Cargo.toml  README.md  pyproject.toml
native/sevenzip_password_tester/: CMakeLists.txt  README.md
native/sevenzip_password_tester/include/sevenzip_password_tester/: password_tester.hpp
native/sevenzip_password_tester/src/: archive_probe.cpp  archive_test.cpp  c_api_common.hpp  c_api_crc_manifest.cpp  c_api_health.cpp  c_api_operation.cpp  c_api_passwords.cpp  c_api_resources.cpp  password_tester.cpp  sevenzip_worker.cpp
native/sevenzip_password_tester/src/internal/: archive_crc_manifest.cpp  archive_extract.cpp  archive_health.cpp  archive_open_plan.cpp  archive_open_plan.hpp  archive_operations.hpp  archive_resources.cpp  embedded_7z.cpp  embedded_7z.hpp  operation_dispatch.cpp  operation_dispatch.hpp  password_testing.cpp  sevenzip_callbacks.hpp  sevenzip_engine.cpp  sevenzip_formats.cpp  sevenzip_formats.hpp  sevenzip_paths.cpp  sevenzip_paths.hpp  sevenzip_properties.cpp  sevenzip_properties.hpp  sevenzip_sdk.cpp  sevenzip_sdk.hpp  sevenzip_status.cpp  sevenzip_status.hpp  sevenzip_streams.cpp  sevenzip_streams.hpp  strict_archive_validation.cpp  strict_archive_validation.hpp
native/sevenzip_password_tester/tests/: smoke.cpp
native/smart_unpacker_native/: Cargo.toml  README.md  pyproject.toml
native/smart_unpacker_native/src/: analysis.rs  archive_deep_repair.rs  binary_profile.rs  carrier.rs  compression_stream_repair.rs  directory_scan.rs  file_crc.rs  format_structure.rs  lib.rs  magic.rs  password_7z.rs  password_input.rs  password_rar.rs  password_zip.rs  pe_overlay.rs  relations.rs  repair_io.rs  util.rs  zip_deep_repair.rs  zip_names.rs
native/sunpack_native/: Cargo.toml  README.md  pyproject.toml
packrelic/: __init__.py  __main__.py
packrelic/analysis/: __init__.py  result.py  scheduler.py  view.py
packrelic/app/: cli.py  cli_commands.py  cli_constants.py  cli_context.py  cli_parsers.py  cli_reporter.py  cli_runtime.py  cli_values.py
packrelic/config/: cli_settings.py  config_validator.py  detection_view.py  loader.py  paths.py  payload_io.py  schema.py
packrelic/contracts/: archive_input.py  archive_state.py  detection.py  tasks.py
packrelic/coordinator/: analysis_stage.py  extraction_batch.py  inspector.py  repair_beam.py  repair_loop.py  repair_stage.py  resource_preflight.py  runner.py  scanner.py  space_guard.py  task_scan.py
packrelic/detection/: __init__.py  nested_scan_policy.py  scheduler.py  task_provider.py  validation.py
packrelic/extraction/: progress.py  scheduler.py
packrelic/filesystem/: directory_scanner.py
packrelic/passwords/: __init__.py  archive_tester.py  fingerprint.py  job.py  resolver.py  scheduler.py
packrelic/postprocess/: actions.py  space_recovery.py
packrelic/relations/: __init__.py  scheduler.py
packrelic/rename/: __init__.py  scheduler.py
packrelic/repair/: __init__.py  candidate.py  config.py  context.py  coverage.py  diagnosis.py  job.py  result.py  scheduler.py
packrelic/support/: archive_error_signals.py  archive_state_view.py  config_values.py  extensions.py  global_cache_manager.py  path_keys.py  path_names.py  resources.py  sevenzip_native.py  sevenzip_worker.py
packrelic/verification/: __init__.py  archive_state_manifest.py  comparison.py  evidence.py  pipeline.py  registry.py  scheduler.py
packrelic/watch/: __init__.py  scanner.py  scheduler.py
repair_training/: archive_derivation_config.json  build_material.ps1  build_repair_plan_corpus.py  collect_plan_data.ps1  derive_archives.ps1  derive_archives.py  training_corruption.py
scripts/: build_windows.ps1  collect_repair_candidates.py  concurrency_benchmark.py  register_context_menu.ps1  run_ci_tests.ps1  setup_windows_dev.ps1  unregister_context_menu.ps1  verify_windows_package_arch.ps1
smart_unpacker/: __init__.py  __main__.py
smart_unpacker/analysis/: config.py  scheduler.py  view.py
smart_unpacker/app/: cli.py  cli_commands.py  cli_constants.py  cli_context.py  cli_parsers.py  cli_reporter.py  cli_runtime.py  cli_types.py  cli_values.py
smart_unpacker/config/: cli_settings.py  config_validator.py  detection_view.py  loader.py  paths.py  payload_io.py  schema.py
smart_unpacker/contracts/: archive_input.py  archive_state.py  filesystem.py  results.py  rules.py  run_context.py  tasks.py
smart_unpacker/coordinator/: analysis_stage.py  context.py  extraction_batch.py  inspector.py  output_scan.py  repair_beam.py  repair_loop.py  repair_stage.py  reporting.py  resource_preflight.py  runner.py  scanner.py  space_guard.py  task_scan.py
smart_unpacker/core/: cleanup.py  engine.py  extraction.py  scheduler.py
smart_unpacker/detection/: __init__.py  defaults.py  inspector.py  nested_scan_policy.py  rename_planner.py  scene_rules.py  scheduler.py  signatures.py  split_relations.py  task_provider.py  validation.py
smart_unpacker/extraction/: progress.py  result.py  scheduler.py
sunpack/: __init__.py  __main__.py
tests/: README.md  cli_unit_test.py  conftest.py  disguised_detection_profile_test.py  edge_cases_test.py  module_unit_test.py  performance_pressure_test.py  relationship_grouping_test.py  rpgmaker_semantic_test.py  test_config.json  test_tools.json
(+856 files in other folders)
