[package]
name = "smart-unpacker-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "smart_unpacker_native"
crate-type = ["cdylib"]

[dependencies]
memchr = "2.7"
pyo3 = { version = "0.27", features = ["extension-module"] }
regex = "1.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
