[package]
name = "smart-unpacker-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "smart_unpacker_native"
crate-type = ["cdylib"]

[dependencies]
aes = "0.9"
base64 = "0.22"
bzip2 = "0.4"
cbc = "0.2"
flate2 = "1.0"
hmac = "0.12"
memchr = "2.7"
pbkdf2 = "0.12"
pyo3 = { version = "0.27", features = ["extension-module"] }
regex = "1.11"
sevenz-rust2 = { version = "0.21", default-features = false, features = ["aes256"] }
sha1 = "0.10"
sha2 = "0.10"
xz2 = "0.1"
zstd = "0.13"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
